deployment/scrum-tools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrum-tools
  labels:
    app: scrum-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      name: scrum-tools
  template:
    metadata:
      labels:
        name: scrum-tools
    spec:
      containers:
        - name: scrum-tools
          image: dhcode/scrum-tools:v0.0.2
          ports:
            - containerPort: 3000
