deployment/scrum-tools-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: scrum-tools-service
  name: scrum-tools
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    name: "scrum-tools"
