deployment/scrum-tools-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: scrum-tools-ingress
  annotations:
    # based on https://cert-manager.io/docs/tutorials/acme/ingress/
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - scrumit.live
      secretName: scrum-tools-tls
  rules:
    - host: scrumit.live
      http:
        paths:
          - path: /
            backend:
              serviceName: scrum-tools
              servicePort: 3000
